--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
 <!-- Header -->
-
+<div class="container">
 <nav class="navbar navbar-default jumbotron" >
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">RAED F
         </a>
       </div>
-      <ul class="nav navbar-nav" id="li">
+      <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">services</a></li>
         <li><a href="#">Testimonials</a></li>
@@ -38,16 +38,39 @@
           </form>
       </div>
 </nav>
-<div class="containter">
-<h1 >Great software is built with amazing developers</h1>
+<div class="row">
+    <div class="col-sm-6">
+    <h1>Great software is built with amazing developers</h1>
 <p>We help build and manage a team of world-class developers to bring your vision to life</p>
 <form class="navbar-form navbar-left" action="/action_page.php">
     <div class="form-group">
-      <input type="text" class="form-control" placeholder="Search">
+      <input type="text" class="form-control" placeholder="Subscribe newsletter">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-  </form>
+    <button type="submit" class="btn btn-sub">Subscribe</button>
+  </form> 
 </div>
+ <div class="col-sm-6"><img src="banner-image-1-1.png" alt=""></div>
+ </div>
+ <!-- <div class="spans ">
+    <span class=""></span>
+   <div> </div>
 
+   
+    
+
+</div> -->
+<div class="row">
+<div class="col-sm-2">
+    powered by:
+</div>
+<div class="col-sm-2">
+    <img class="photo1" src="bureau.png">
+</div>
+<div class="col-sm-1">
+    <img  class="photo2" src="google.png">
+</div>
+</div>
+<!-- <div> </div> -->
+</div>
 </body>
 </html>
